# CR-2024-ATS

./: .flake8  pyproject.toml
.gibhub/: build.backup  build.yaml
.gibhub/workflows/: build.yaml
.github/workflows/: build.yaml
docker/: Dockerfile
src/ats-core/ats/core/: __init__.py
src/ats-core/ats/core/models/base/: __init__.py  app.py
src/ats-web/ats/: __init__.py
src/ats-web/ats/web/: __init__.py  app.py
src/ats-web/ats/web/pages/: default.html  default.py
