[tool.poetry]
name = "ats"
version = "0.1.0"
description = "Almost the Same is Still Different"
authors = ["Arnoud Stolk"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.5"
mypy = "^1.10.0"
pylint = "^3.2.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
